--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <p>Hello, world! - I'm testing</p>
 
-  <script src="js/script.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
