skapat style.css

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title></title>
-  <meta name="author" content="">
-  <meta name="description" content="">
+  <meta name="author" content="JuiceAndTheJoe">
+  <meta name="description" content="Project Website">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link href="css/style.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
