landing page creation

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>It's juicing time</title>
   <meta name="author" content="JuiceAndTheJoe">
   <meta name="description" content="Project Website">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,9 +13,16 @@
 
 <body>
 
-  <p>Hello, world! - I'm testing</p>
+  <header>
+    <h1>Hello world! - I'm currently testing.</h1>
+  </header>
+  <nav>
+    <ul>
+      <a href="draw.html">Drawing website project</a>
+      <a href="http://linkd.in/in/jwevc"> My Linkedin</a>
+    </ul>
+  </nav>
 
-  <script src="main.js"></script>
 </body>
 
 </html>
