flera links tillagda

--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
 <body>
 
   <header>
-    <h1>Hello world! - I'm currently testing.</h1>
+    <h1>"The only way to do great work is to love what you do." - Steve Jobs</h1>
   </header>
   <nav>
     <ul>
       <a href="draw.html">Drawing website project</a>
-      <a href="http://linkd.in/in/jwevc"> My Linkedin</a>
+      <a href="http://linkd.in/in/jwevc">My Linkedin</a>
+      <a href="https://www.c-print.se/post/characters-in-a-conference-members-of-an-audience">My Artsicle</a>
+      <a href="https://www.sololearn.com/profile/11050207/">My Sololearn profile</a>
+      <a href="https://github.com/JuiceAndTheJoe">My GitHub</a>
     </ul>
   </nav>
 
