--- a/index.html
+++ b/index.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-  <meta charset="utf-8">
-  <title>It's juicing time</title>
-  <meta name="author" content="JuiceAndTheJoe">
-  <meta name="description" content="Project Website">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <link href="style.css" rel="stylesheet">
+  <title>Jose Velásquez - Personal Website</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
+  <div class="container">
+    <div class="left">
+      <div class="content">
+        <h1>About Me</h1>
+        <p>
+          My name is Jose Velásquez (stylized Juice or Jose-William: Velásquez) and I am a Media Technology Engineering student at KTH.
+          This is my personal website, a place for my delusions and illusions to blossom.
+        </p>
+      </div>
+    </div>
+    <div class="right">
+      <h2>Juice's megamix of sneaky links:</h2>
+      <ul>
+        <li><a href="draw.html">Drawing website project</a></li>
+        <li><a href="http://linkd.in/in/jwevc">My Linkedin</a></li>
+        <li><a href="https://www.c-print.se/post/characters-in-a-conference-members-of-an-audience">My Artsicle</a></li>
+        <li><a href="https://www.sololearn.com/profile/11050207/">My Sololearn profile</a></li>
+        <li><a href="https://github.com/JuiceAndTheJoe">My GitHub</a></li>
+      </ul>
+      <div class="progress-bar">
+        <div class="progress-container">
+          <p class="progress-description">My journey to MScEng: <span id="progress">20%</span></p>
 
-  <header>
-    <h1>"The only way to do great work is to love what you do." - Steve Jobs</h1>
-  </header>
-  <nav>
-    <ul>
-      <a href="draw.html">Drawing website project</a>
-      <a href="http://linkd.in/in/jwevc">My Linkedin</a>
-      <a href="https://www.c-print.se/post/characters-in-a-conference-members-of-an-audience">My Artsicle</a>
-      <a href="https://www.sololearn.com/profile/11050207/">My Sololearn profile</a>
-      <a href="https://github.com/JuiceAndTheJoe">My GitHub</a>
-    </ul>
-  </nav>
-
+          <div class="bar">
+            <div class="progress" style="width: 20%;"></div>
+          </div>
+          <p class="current-status">Currently: On sabbatical, in the military</p>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
-
 </html>
