--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
       </div>
     </div>
     <div class="right">
-      <h2>Juice's megamix of sneaky links:</h2>
+      <h2>I have dabbled in:</h2>
       <ul>
-        <li><a href="draw.html">Drawing website project</a></li>
+        <li><a href="draw.html">Web development</a></li>
+        <li><a href="https://www.c-print.se/post/characters-in-a-conference-members-of-an-audience">Contemporary art</a></li>
+        <li><a href="https://www.sololearn.com/profile/11050207/">Learning programming</a></li>
+      </ul>
+      <h2>Juice's list of sneaky links:</h2>
+      <ul>
         <li><a href="http://linkd.in/in/jwevc">My Linkedin</a></li>
-        <li><a href="https://www.c-print.se/post/characters-in-a-conference-members-of-an-audience">My Artsicle</a></li>
-        <li><a href="https://www.sololearn.com/profile/11050207/">My Sololearn profile</a></li>
         <li><a href="https://github.com/JuiceAndTheJoe">My GitHub</a></li>
       </ul>
       <div class="progress-bar">
