created secondary pages

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="right">
       <h2>I have dabbled in:</h2>
-      <p><a href="https://www.sololearn.com/profile/11050207/">Programming</a>, <a href="draw.html">Web development</a>, <a href="https://www.c-print.se/post/characters-in-a-conference-members-of-an-audience">Contemporary art</a>, <a href="video.html">Film production</a>, <a href="music.html">Music production</a> and much more!</p>
+      <p><a href="https://www.sololearn.com/profile/11050207/">Programming</a>, <a href="draw.html">Web development</a>, <a href="https://www.c-print.se/post/characters-in-a-conference-members-of-an-audience">Contemporary Art</a>, <a href="video.html">Film Production</a>, <a href="act.html">Acting</a>, <a href="music.html">Music Production</a> and much more!</p>
       
       <h2>Juice's list of sneaky links:</h2>
       <ul>
