--- a/index.html
+++ b/index.html
@@ -16,9 +16,14 @@
       </div>
     </div>
     <div class="right">
-      <h2>I have dabbled in:</h2>
-      <p><a href="https://www.sololearn.com/profile/11050207/">Programming</a>, <a href="draw.html">Web development</a>, <a href="https://www.c-print.se/post/characters-in-a-conference-members-of-an-audience">Contemporary Art</a>, <a href="video.html">Film Production</a>, <a href="act.html">Acting</a>, <a href="music.html">Music Production</a> and much more!</p>
-      
+      <p style="font-size: 30px;">Throughout my journey, I have delved into a myriad of creative endeavors, exploring the boundless realms of 
+        <a href="https://www.sololearn.com/profile/11050207/">Programming</a>, 
+        <a href="draw.html">Web Development</a>, 
+        <a href="https://www.c-print.se/post/characters-in-a-conference-members-of-an-audience">Contemporary Art</a>, 
+        <a href="video.html">Film Production</a>, 
+        <a href="act.html">Acting</a>, 
+        <a href="music.html">Music Production</a>, 
+        and an array of many other captivating pursuits.</p>      
       <h2>Juice's list of sneaky links:</h2>
       <ul>
         <li><a href="http://linkd.in/in/jwevc">My Linkedin</a></li>
