--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <title>Jose Velásquez - Personal Website</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
 <body>
   <div class="container">
     <div class="left">
@@ -16,19 +18,24 @@
       </div>
     </div>
     <div class="right">
-      <p style="font-size: 30px;">Throughout my journey, I have delved into a myriad of creative endeavors, exploring the boundless realms of 
-        <a href="https://www.sololearn.com/profile/11050207/">Programming</a>, 
-        <a href="draw.html">Web Development</a>, 
-        <a href="https://www.c-print.se/post/characters-in-a-conference-members-of-an-audience">Contemporary Art</a>, 
-        <a href="video.html">Film Production</a>, 
-        <a href="act.html">Acting</a>, 
-        <a href="music.html">Music Production</a>, 
-        and an array of many other captivating pursuits.</p>      
-      <h2>Juice's list of sneaky links:</h2>
-      <ul>
-        <li><a href="http://linkd.in/in/jwevc">My Linkedin</a></li>
-        <li><a href="https://github.com/JuiceAndTheJoe">My GitHub</a></li>
-      </ul>
+
+      <div class="text">
+        <p style="font-size: 30px;">Throughout the years, I have delved into a myriad of creative endeavors, exploring the boundless realms of 
+          <a class="text-link" href="https://www.sololearn.com/profile/11050207/">Programming</a>, 
+          <a class="text-link" href="draw.html">Web Development</a>, 
+          <a class="text-link" href="https://www.c-print.se/post/characters-in-a-conference-members-of-an-audience">Contemporary Art</a>, 
+          <a class="text-link" href="video.html">Film Production</a>, 
+          <a class="text-link" href="act.html">Acting</a>, 
+          <a class="text-link" href="music.html">Music Production</a>, 
+        and an array of many other captivating pursuits.</p>
+      </div>
+      
+
+      <div class="links">
+        <a href="http://linkd.in/in/jwevc"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/JuiceAndTheJoe"><i class="fab fa-github"></i></a>
+      </div>
+
       <div class="progress-bar">
         <div class="progress-container">
           <p class="progress-description">My journey to MScEng: <span id="progress">20%</span></p>
