--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <div class="content">
         <h1>About Me</h1>
         <p>
-          My name is Jose Velásquez (stylized Juice or Jose-William: Velásquez) and I am a Media Technology Engineering student at KTH.
-          This is my personal website, a place for my delusions and illusions to blossom.
+          My name is Jose Velásquez (stylized <i>Juice</i> or Jose-William: Velásquez) and I am a Media Technology Engineering student at <a href="https://www.kth.se">KTH Royal Institute of Technology</a>.
+          This is my personal website, a place for my illusions (and delusions) to blossom.
         </p>
       </div>
     </div>
@@ -22,11 +22,12 @@
       <div class="text">
         <p style="font-size: 30px;">Throughout the years, I have delved into a myriad of creative endeavors, exploring the boundless realms of 
           <a class="text-link" href="https://www.sololearn.com/profile/11050207/">Programming</a>, 
-          <a class="text-link" href="draw.html">Web Development</a>, 
+          <a class="text-link" href="/draw/draw.html">Web Development</a>, 
           <a class="text-link" href="https://www.c-print.se/post/characters-in-a-conference-members-of-an-audience">Contemporary Art</a>, 
           <a class="text-link" href="video.html">Film Production</a>, 
           <a class="text-link" href="act.html">Acting</a>, 
-          <a class="text-link" href="music.html">Music Production</a>, 
+          <a class="text-link" href="/Music/music.html">Music Production</a>,
+          <a class="text-link" href="/ML/papayAi.html">Machine Learning</a>
         and an array of many other captivating pursuits.</p>
       </div>
 
