film page start

--- a/video.html
+++ b/video.html
@@ -1,2 +1,22 @@
 <p>Sus i Jönköping (2023)</p>
 <p>Bike (Coming summer 2024)</p>
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Jose Velásquez - Film Production</title>
+        <link rel="stylesheet" href="filmStyle.css">
+    </head>
+
+    <body>
+        <div class="container">
+            <div class="left">
+                <h1>Sus i Jönköping</h1>
+                <h3><i>2023</i></h3>
+            </div>
+            <div class="right">Bike</div>
+                <h1>Bike</h1>
+                <h3><i>Coming summer 2024</i></h3>
+        </div>
+    </body>
+</html>
