bg set, divs placed beside each other

--- a/video.html
+++ b/video.html
@@ -5,16 +5,16 @@
         <link rel="stylesheet" href="filmStyle.css">
     </head>
 
-    <body style="background-image: https://www.google.com/url?sa=i&url=https%3A%2F%2Funsplash.com%2Fs%2Fphotos%2Fmovie-theater&psig=AOvVaw2sJ4OwSM1hSoJ8V2Mqy50n&ust=1713804942416000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCPCwgYjj04UDFQAAAAAdAAAAABBg;">
+    <body>
         <div class="container">
             <div class="left">
-                <h1>Sus i Jönköping</h1>
+                <a href="https://drive.google.com/file/d/1JqseVskGVhn775tvSXem1LRYqpwl4AQu/preview">Sus i Jönköping</a>
                 <h3><i>2023</i></h3>
-                <iframe src="https://drive.google.com/file/d/1JqseVskGVhn775tvSXem1LRYqpwl4AQu/preview" width="640" height="480" allow="autoplay"></iframe>
             </div>
-            <div class="right">Bike</div>
-                <h1>Bike</h1>
+            <div class="right">
+                <a>Bike<a>
                 <h3><i>Coming summer 2024</i></h3>
+            </div>
         </div>
     </body>
 </html>
