--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <a class="text-link" href="video.html">Film Production</a>, 
           <a class="text-link" href="act.html">Acting</a>, 
           <a class="text-link" href="/Music/music.html">Music Production</a>,
-          <a class="text-link" href="/ML/papayAi.html">Machine Learning</a>
+          <a class="text-link" href="https://juiceandthejoe.github.io/papayAI">Machine Learning</a>
         and an array of many other captivating pursuits.</p>
       </div>
 
